--- a/first_page.html
+++ b/first_page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cube3</title>
 </head>
 <body>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident illum, earum optio odit repellat expedita pariatur at ipsa perferendis repellendus beatae quasi fuga ratione ex alias, omnis iste, debitis quidem?</p>
