fix: Creted the first page

--- a/first_page.html
+++ b/first_page.html
@@ -23,7 +23,7 @@
         </div>
         <div class="box" onclick="toggleBox(this)">
             Raw Text
-            <div class="content">Manually enter raw text for analyzis</div>
+            <div class="content">Manually enter raw text for analysis</div>
         </div>
     </div>
 
